Fixing overflow bug

--- a/app/(pages)/(index-page)/_components/Landing/_components/Grass/Grass.module.scss
+++ b/app/(pages)/(index-page)/_components/Landing/_components/Grass/Grass.module.scss
@@ -10,6 +10,7 @@ $bg-color: var(--landing-bg);
   justify-content: center;
   background-color: transparent;
   width: 100%;
+  overflow: hidden;
 }
 .grass{
   display: flex;
